--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -2,26 +2,42 @@
 {% load i18n generic_fields friendly_data_formatting  %}
 {% block title %}Register for an account at GoodCloud{% endblock %}
 {% block head %}{{block.super}}
-{% js "/li}
+{% js "/js/mycelium/signup.js" %}
+{% css "/css/signup.css" %}
 {% endblock %}
 
-{% block dialog_content %}
-We're proud to serve you.
-Register for an account with GoodCloud!
+{% block content %}
+<div class="signup_page">
+<div class="organization_and_domain">
+	<div class="organization_name">One-step easy.</div>
+	<div class="domain"></div>
+</div>
+<div class="single_dialog">
+<div class="welcome_message">Create a free account to see firsthand what GoodCloud can do for your organization.</div>
+
 <form action="" method="POST" id="signup_form" class="edit_mode_on" />{% csrf_token %}
 
-{% editable_field_only account_form.name %}
-{% editable_field_only account_form.subdomain %}
-Organization Name
-Address you want (mygreatnonprofit.goodcloud.com)
+<div class="form_section">
+	<div class="section_title">About your nonprofit</div>
+	{% plain_editable_field account_form.name %}
+	<div class="editable_field" id="container_id_{{account_form.subdomain.html_name}}">
+			<label class="generic_field_label">Pick your Goodcloud Address:</label>
+			<span class="edit_field"><span class="address_boilerplate">http://</span>{{account_form.subdomain}}<span class="address_boilerplate">.agoodcloud.com</span></span>
+			
+	</div>
+</div>
 
-{% editable_field_only user_form.first_name %}
-{% editable_field_only user_form.email %}
-{% editable_field_only user_form.username %}
-{% editable_field_only user_form.password %}
+<div class="form_section">
+	<div class="section_title">About you</div>
+	{% plain_editable_field user_form.first_name "Full name:" %}
+	{% plain_editable_field user_form.email %}
+	{% plain_editable_field user_form.username %}
+	{% plain_editable_field user_form.password %}
+</div>
 
 <input type="submit" id="submit_button" class="mycelium_btn" value="Create our Account" />
 
 </form>
-
+</div>
+</div>
 {% endblock %}
