--- a/media/css/signup.css
+++ b/media/css/signup.css
@@ -88,7 +88,7 @@
 	color: #FFF;
 	background-color: #CCC;
 	border-color: #DDD;
-	text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+	text-shadow: 0px 0px 0px;
 }
 
 .signup_page .editable_field {
