--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -1,3 +1,10 @@
+/*
+Colors:
+Blue: #000486
+Light Blue: #006bcf;
+Green: ;
+*/
+
 body {
 	/*background: url("../images/green_tweed_background.gif");*/
 	background: url("../images/background-noise-green.png");
