--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -1,9 +1,16 @@
 {% load i18n %}{% load cache cms_tags menu_tags %}
 {% block nav %}
+<div id="nav_and_logo_container">
 <a id="logo" href="{% page_url "marketing_site_home" %}">
 	GoodCloud
 </a>
 <div id="main_nav">{% spaceless %}
-	{% show_menu %}	
-{% endspaceless %}</div>
+	<a href="#" class="current">Home</a>
+	<a href="#" class="">Features</a>
+	<a href="#" class="">Tour</a>
+	<a href="#" class="">Praise</a>
+	<a href="#" class="">Free Trial</a>
+	
+{% endspaceless %}</div
+</div>
 {% endblock %}
