--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -1,4 +1,8 @@
 {% load i18n cache cms_tags menu_tags %}<div id="footer">
-	<div class="copyright">All content copyright GoodCloud, LLC, 2010-{% now "Y" %}</div>
-	<div class="footer_links">{% show_menu %}</div>
+{# 	<div class="copyright">All content copyright GoodCloud, LLC, 2010-{% now "Y" %}</div> #}
+	{# <div class="footer_links">{% show_menu %}</div> #}
+	<a href="#">About us</a> | 
+	<a href="#">Blog</a> | 
+	<a href="#">Legal</a> | 
+	<a href="#">Contact us</a>
 </div>
