--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
 {% css "/css/marketing_site.css" %}
 <!--[if lt IE 8]>
