--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -1,8 +1,14 @@
 body {
-	background-color: #0060b9;
-	background-image: url("../images/marketing-background-stripes-3.jpg");	
+	background-color: #006fd6;
+	background-image: url("../images/marketing-background-plain-1.jpg");	
+	background-repeat: repeat-x;
+	background-position: 0px 0px;
+	position: relative;
+}
+body.home_page {
+	background-image: url("../images/marketing-background-stripes-5.jpg");	
 	background-repeat: no-repeat;
-	background-position: 50% 6%;
+	background-position: 50% 5%;
 	position: relative;
 }
 
@@ -10,10 +16,18 @@ body {
 	width: 100%;
 	display: block;
 	/*background: #000486;*/
-	position: absolute;	
+	/*position: absolute;	*/
 	top: 0px;
 	right: 0px;
-	background: rgba(0, 4, 134, 0.9);
+	
+	/*overflow: auto;*/
+	height: 80px;
+	/*background-color: rgba(0, 4, 134, 0.9);*/
+	background-image: url("../images/marketing-menubar.png");	
+	background-repeat: repeat-x;
+	background-position: 0px 0px;
+	border: #000 1px solid;
+    border-width: 0px 0px 1px 0px;	
 }
 #main_nav {
 	display: block;
@@ -22,10 +36,8 @@ body {
 	height: 60px;
 	
 	
-	padding: 20px 4px 0px 40%;
+	padding: 20px 4px 0px 0px;
     overflow: hidden;
-    border: #000 1px solid;
-    border-width: 0px 0px 1px 0px;
 }
 #main_nav a {
 	text-decoration: none;
@@ -174,25 +186,6 @@ input {
 	font-size: 20px;
 	padding: 6px;
 }
-/*input, textarea {outline-style:none;}*/
-#id_email {
-	width: 400px;
-	background: #FEFEFE;
-	border: #6D8CAD 1px solid;
-}
-#id_email.hovered {
-	border: #00489C 1px solid;
-	background: #FFF;
-}
-#id_email.prefilled.tv-focused, #id_email.prefilled.tv-changed {
-	color: #222;
-}
-#id_email.prefilled {
-	color: #AAA;
-}
-#id_email.hovered.prefilled {
-	color: #666;
-}
 
 #id_submit {
 	border: 0px solid #EEE;
@@ -338,7 +331,7 @@ input {
 	color: #399df8;
 }
 #footer a:hover {
-	color: #3B5672;
+	color: #57afff;
 }
 social_links {
 	padding: 10px;
@@ -384,6 +377,15 @@ social_links {
   	border-top-left-radius: 6px;
   	-moz-border-radius-topleft: 6px;
   	font-size: 18px;
+
+	box-shadow: 		0px 1px 1px rgba(0,0,0,0.35);
+  	-moz-box-shadow:	0px 1px 1px rgba(0,0,0,0.35);
+  	-khtml-box-shadow: 	0px 1px 1px rgba(0,0,0,0.35);
+  	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,0.35);
+
+/*	border: #222 1px solid;
+    border-width: 0px 0px 1px 0px;
+*/
 }
 #home_boxes .home_box .description {
 	padding: 10px 10px 0px 10px;
