--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n cache cms_tags menu_tags %}
 {% block title %}GoodCloud: {% page_attribute page_title %}{% endblock %}
+{% block extra_body %}class="home_page"{% endblock %}
 {% block head %}{{block.super}}
 {% js "/js/mycelium/marketing_home.js" %}
 {% endblock %}
@@ -21,11 +22,11 @@
 		<div class="action"><a href="#">See what they had to say!</a></div>
 	</div>
 	<div class="home_box ready_to_go">
-		<div class="title">Ready to go today</div>
+		<div class="title">Ready to Go Today</div>
 		<div class="description">
 			Sign up for a free trial account in less than 60 seconds. No strings, no hassle, no credit card.
 		</div>
-		<div class="action"><a href="#">Try GoodCloud now!</a></div>
+		<div class="action"><a href="{% url accounts:signup %}">Try GoodCloud now!</a></div>
 	</div>
 
 
