--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -12,6 +12,7 @@
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
+	<div class="clearfix"></div>
 	{% block page_content %}
 	{% endblock %}
 	{% include "marketing_site/_footer.html" %}	
