--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -15,11 +15,9 @@ body.home_page {
 #nav_and_logo_container {
 	width: 100%;
 	display: block;
+
 	/*background: #000486;*/
-	/*position: absolute;	*/
-	top: 0px;
-	right: 0px;
-	
+
 	/*overflow: auto;*/
 	height: 80px;
 	/*background-color: rgba(0, 4, 134, 0.9);*/
@@ -27,7 +25,9 @@ body.home_page {
 	background-repeat: repeat-x;
 	background-position: 0px 0px;
 	border: #000 1px solid;
-    border-width: 0px 0px 1px 0px;	
+    border-width: 0px 0px 1px 0px;
+    clear: both;
+
 }
 #main_nav {
 	display: block;
@@ -80,9 +80,9 @@ body.home_page {
 
 #logo {
 	display: block;
-	position: absolute;	
-	top: 4px;
-	left: 10px;
+	float: left;
+	margin-top: 4px;
+	margin-left: 10px;
 	font-size: 50px;
 	color: #FFF;
 /*	text-shadow:		 1px 1px 1px #0054A4;
