--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -92,7 +92,7 @@ We know you don’t have an IT department, and you don’t want to spend your da
 	<div class="row">
 		<div class="feature more_to_come">
 			<div class="title">We're not done yet.</div>
-			<div class="description">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, and Volunteers!</div>
+			<div class="description">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
 		</div>
 		<div class="">
 
@@ -101,7 +101,7 @@ We know you don’t have an IT department, and you don’t want to spend your da
 
 </div>
 </div>
-<div class="page_action">Try GoodCloud today!</div>
+<a href="{% url accounts:signup %}" class="page_action">Try GoodCloud today!</a>
 <div class="clearfix"></div>
 
 
