--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -1,8 +1,8 @@
-{% load i18n cache cms_tags menu_tags %}<div id="footer">
+{% load i18n cache cms_tags menu_tags current_page  %}<div id="footer">
 {# 	<div class="copyright">All content copyright GoodCloud, LLC, 2010-{% now "Y" %}</div> #}
 	{# <div class="footer_links">{% show_menu %}</div> #}
-	<a href="{% url marketing_site:about_us %}">About us</a> | 
-	<a href="{% url blog %}">Blog</a> | 
-	<a href="{% url marketing_site:legal %}">Legal</a> | 
-	<a href="{% url marketing_site:contact_us %}">Contact us</a>
+	<a {% current_page_link_and_class request "marketing_site:about_us" "" %}	>About us</a> | 
+	<a {% current_page_link_and_class request "blog" "" %} 						>Blog</a> | 
+	<a {% current_page_link_and_class request "marketing_site:legal" "" %} 		>Legal</a> | 
+	<a {% current_page_link_and_class request "marketing_site:contact_us" "" %} >Contact us</a>
 </div>
