--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -22,4 +22,11 @@
 	{% block page_content %}
 	{% endblock %}
 	{% include "marketing_site/_footer.html" %}	
+	<script type="text/javascript">
+	  (function() {
+	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+	    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/AwQUXURGT97r7ts4zvEIaA.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+	  })();
+	</script>
 {% endblock %}
