--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -15,21 +15,21 @@
 <div class="single_dialog">
 <div class="welcome_message">Create a free account to see firsthand what GoodCloud can do for your organization.</div>
 
-<form action="" method="POST" id="signup_form" class="edit_mode_on" />{% csrf_token %}
+<form action="" method="POST" id="signup_form" class="edit_mode_on" >{% csrf_token %}
 
-<div class="form_section">
+<div class="form_section nonprofit">
 	<div class="section_title">About your nonprofit</div>
 	{% plain_editable_field account_form.name %}
 	<div class="editable_field" id="container_id_{{account_form.subdomain.html_name}}">
 			<label class="generic_field_label">Pick your custom <br/>Goodcloud address:</label>
 			<span class="edit_field"><span class="address_boilerplate">http://</span>{{account_form.subdomain}}<span class="address_boilerplate">.agoodcloud.com</span></span>
 	</div>
-	<div class="editable_field" id="subdomain_verification" class="not_verified" verification_url="{% url accounts:verify_subdomain %}">
+	<div id="subdomain_verification" class="editable_field not_verified" verification_url="{% url accounts:verify_subdomain %}">
 			<div class="subdomain_response"></div>
 	</div>
 </div>
 
-<div class="form_section">
+<div class="form_section you">
 	<div class="section_title">About you</div>
 	{% plain_editable_field user_form.first_name "Full name:" %}
 	{% plain_editable_field user_form.email %}
