adding an account basically works

--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -12,7 +12,7 @@
 		<div class="button_title">Data Import</div>
 		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
-	<a href="" class="mycelium_btn more_button account_button">
+	<a href="{% url accounts:manage_users %}" class="mycelium_btn more_button account_button">
 		<div class="button_title">Account</div>
 		<div class="button_description">Update billing and account information</div>
 	</a>
