--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -240,6 +240,12 @@ new_object_buttons .new_label {
 	background-color: #0044A8;
 	color: #FFF;	
 }
+.mycelium_btn.disabled {
+	color: #FFF;
+	background-color: #CCC;
+	border-color: #DDD;
+	text-shadow: 0px 0px 0px;
+}
 .mycelium_small_btn, input.mycelium_small_btn {
 	font-size: 12px;
 	padding: 3px 6px;
@@ -325,7 +331,10 @@ table.record_table {
 }
 table.record_table th {
 	text-align: left;
-	background-color: #EEE;
+	background-color: #DDD;
+	padding: 2px;
+	border: 1px solid #999;
+	border-width: 0px 0px 1px 0px;
 }
 table.record_table td {
 	padding: 2px;
