--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -12,9 +12,9 @@
 		<div class="button_title">Data Import</div>
 		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
-	<a href="{% url accounts:manage_users %}" class="mycelium_btn more_button account_button">
-		<div class="button_title">Account</div>
-		<div class="button_description">Update billing and account information</div>
+	<a href="{% url accounts:manage_users %}" class="mycelium_btn more_button users_button">
+		<div class="button_title">Users</div>
+		<div class="button_description">Create, edit, and set access for user accounts</div>
 	</a>
 	</div>
 	<div class="more_row">
@@ -22,9 +22,9 @@
 		<div class="button_title">Spreadsheets</div>
 		<div class="button_description">Create and download custom spreadsheets</div>
 	</a>
-	<a href="#" class="mycelium_btn more_button users_button">
-		<div class="button_title">Users</div>
-		<div class="button_description">Create, edit, and set access for user accounts</div>
+	<a href="#" class="mycelium_btn more_button account_button">
+		<div class="button_title">Account</div>
+		<div class="button_description">Update billing and account information</div>
 	</a>
 	</div>
 	<div class="more_row">
