--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -240,7 +240,7 @@ new_object_buttons .new_label {
 	background-color: #0044A8;
 	color: #FFF;	
 }
-.mycelium_btn.disabled {
+.mycelium_btn.disabled, .mycelium_btn.disabled:hover {
 	color: #FFF;
 	background-color: #CCC;
 	border-color: #DDD;
@@ -332,7 +332,7 @@ table.record_table {
 table.record_table th {
 	text-align: left;
 	background-color: #DDD;
-	padding: 2px;
+	padding: 3px 5px 2px 5px;
 	border: 1px solid #999;
 	border-width: 0px 0px 1px 0px;
 }
