--- a/mycelium/apps/accounts/templates/accounts/manage_users.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_users.html
@@ -13,7 +13,7 @@
 {% block breadcrumb_links %}<a href="{% url people:search %}" >Back to All People and Groups</a>{% endblock %}
 
 {% block page_content %}
-<page_title>{{request.account.name}} Accounts</page_title>
+<page_title>Accounts for {{request.account.name}}</page_title>
 
 <form action="{% url accounts:save_account_access_info %}" class="edit_mode_on" id="basic_info_form" method="POST">{% csrf_token %}
 <save_status_and_button>
@@ -39,8 +39,8 @@
 		<td class="username">{{ua.denamespaced_username}}</td>
 		<td class="email">{{ua.email}}</td>
 		<td class="access_level"><div class="fields">{{form.access_level}}{{form.id}}</div></td>
-		<td class="reset_pass"><a href="#" class="mycelium_btn reset_password_btn mycelium_small_btn">Reset Password</a></td>
-		<td class="delete"><a href="#" class="mycelium_btn mycelium_delete_btn mycelium_active_grey delete_user_btn mycelium_small_btn">Delete User</a></td>
+		<td class="reset_pass"><a href="{% url accounts:reset_account_password ua.pk %}" class="mycelium_btn reset_password_btn mycelium_small_btn">Reset Password</a></td>
+		<td class="delete"><a href="{% url accounts:delete_account ua.pk %}" class="mycelium_btn mycelium_delete_btn mycelium_active_grey delete_user_btn mycelium_small_btn">Delete User</a></td>
 	</tr>
 {% endwith %}
 {% endfor %}
