--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -14,6 +14,11 @@
 </table>
 {% else %}
 <div class="no_people_found">
+{% if q %}
 	No people found for search "{{q}}".
+{% else %}
+	No search.
+{% endif %}
+	
 </div>
 {% endif %}
